# votrix-backend

./: .dockerignore  .env.example  .env.production  .gitignore  CLAUDE.md  COMPOSIO.md  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  entrypoint.sh  pyproject.toml  requirements.txt  run.sh  service.production.yaml  service.staging.yaml
.github/workflows/: require-staging-into-main.yml
agents/TEMPLATE/: README.md  config.json
agents/b2b-sales-agent/: PROMPT.md  config.json
agents/csv-agent/: PROMPT.md  config.json
agents/image-generator/: PROMPT.md  config.json
agents/marketing-agent/: IDENTITY.md  PROMPT.md  SOUL.md  config.json
agents/post-agent/: PROMPT.md  config.json
agents/poster-designer/: PROMPT.md  config.json
agents/scheduling-agent/: PROMPT.md  config.json
agents/website-builder/: PROMPT.md  config.json
alembic/: env.py
alembic/versions/: 20260331_add_storage_path.py  20260401_add_agent_model.py  20260401_initial.py  20260402_blueprint_agent_integrations.py  20260403_sessions.py  20260405_blueprint_agent_integrations_legacy.py  20260408_notifications.py  20260408_schedules.py  20260410_initial.py  20260411_drop_agent_slug.py  20260411_rls_and_trigger.py  20260411_session_provider.py  20260411_user_agent_id.py  20260411_user_provider.py  20260414_auth_hardening.py  20260414_session_display_name.py  20260415_user_agents.py  20260417_drop_session_display_name.py  20260417_session_provider_title.py  20260419_schedules.py  20260419_sessions_text_pk.py  20260423_drop_vault_id.py  20260423_users_vault_id.py  20260425_rls_alembic_version.py  20260428_memory_stores.py  20260429_composio_session.py  20260429_workspace_relations.py  20260429_workspaces.py
app/: auth.py  client.py  config.py  deps.py  logging.py  main.py  short_id.py  storage.py
playground/: .post_agent_cache.json  .scheduling_agent_cache.json  HOW_TO_TEST.md  test_marketing_session.py  test_scheduling_agent.py
scripts/: .post_agent_cache.json  .poster_designer_cache.json  .scheduling_agent_cache.json  HOW_TO_TEST.md  LINKEDIN_IMAGE_UPLOAD.md  TWITTER_IMAGE_VIDEO.md  delete_user_agent.py  gen_carousel_slides.py  gen_hero_image.py  gen_poster.py  setup-env.sh  setup_composio_auth_configs.py  test_agent.py  test_chat_sse.py  test_composio_twitter.py  test_email_and_image.py  test_image.py  test_image_reference.py  test_input.txt  test_output.txt  test_output_archived.txt  test_post_agent.py  test_poster_designer.py  test_provision_and_chat.py  test_scheduling_agent.py  test_tool_dispatch.py  test_video.py
supabase/: config.toml  seed.sql
tests/: conftest.py  test_agents.py  test_binary_files.py  test_blueprint_files.py  test_chat.py  test_chat_sse.py  test_chat_sse_shortid.py  test_cross_tenant.py  test_files.py  test_image_upload.py  test_orgs.py  test_replication.py  test_routes.py  test_sessions.py  test_short_id.py  test_storage.py  test_storage_paths.py  test_user_files.py  test_users.py  test_workspace_dep.py
(+388 files in other folders)
