[project]
name = "votrix-backend"
version = "0.1.0"
description = "Votrix multi-tenant agentic filesystem backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Database (SQLAlchemy async + Postgres)
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Settings
    "pydantic-settings>=2.0",
    # API docs
    "scalar-fastapi>=1.0",
    # HTTP client (Composio catalog cache)
    "httpx>=0.27",
    # Supabase Storage (binary file uploads)
    "supabase>=2.0",
    # Multipart form parsing (binary file upload endpoints)
    "python-multipart>=0.0.9",
    # AI / LangGraph runtime
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    # Composio SDK + provider integrations
    "composio==0.11.4",
    "composio-langchain==0.11.4",
    "composio-anthropic==0.11.4",
    "composio-langgraph==0.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
